--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "immer": "^10.1.1",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
